--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -5,90 +5,96 @@
    "execution_count": 1,
    "id": "62292812-f394-447c-beaf-8b7d71d15a31",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "libodbc.so.2: cannot open shared object file: No such file or directory",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpandas\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mpd\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mexternal\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdb_and_excel_utilities\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m utility \u001b[38;5;28;01mas\u001b[39;00m mutil\n\u001b[0;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mexternal\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdb_and_excel_utilities\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m db_base\n",
-      "File \u001b[0;32m/workspace/external/db_and_excel_utilities/db_base.py:26\u001b[0m\n\u001b[1;32m     24\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mpprint\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pprint\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtime\u001b[39;00m\n\u001b[0;32m---> 26\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mpyodbc\u001b[39;00m\n\u001b[1;32m     27\u001b[0m pyodbc\u001b[38;5;241m.\u001b[39m pooling\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m\n\u001b[1;32m     28\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msqlalchemy\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m create_engine\n",
-      "\u001b[0;31mImportError\u001b[0m: libodbc.so.2: cannot open shared object file: No such file or directory"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from external.db_and_excel_utilities import utility as mutil\n",
-    "from external.db_and_excel_utilities import db_base"
+    "from external.db_and_excel_utilities.utility import Utility as mutil\n",
+    "from external.db_and_excel_utilities.db_base import db_base\n",
+    "import os\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b9b405a0-a341-4fc9-bd1e-65f0e48a8cf5",
    "metadata": {},
    "outputs": [],
    "source": [
-    "util = mutil()"
+    "u = mutil()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "72c5c7c5-2d32-4683-b8b4-83cb17b15407",
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[01;34m.\u001b[00m\n",
-      "├── \u001b[01;32mCsvGeneratorDockerfile\u001b[00m\n",
-      "├── \u001b[01;32mDockerpyspark\u001b[00m\n",
-      "├── \u001b[01;32mREADME.md\u001b[00m\n",
-      "├── \u001b[01;32mUntitled.ipynb\u001b[00m\n",
-      "├── \u001b[01;34martifacts\u001b[00m\n",
-      "│   ├── \u001b[01;34mimages\u001b[00m\n",
-      "│   │   ├── \u001b[01;32mbash.png\u001b[00m\n",
-      "│   │   ├── \u001b[01;32mdependencies.png\u001b[00m\n",
-      "│   │   ├── \u001b[01;32mdocker.png\u001b[00m\n",
-      "│   │   ├── \u001b[01;32mpython.png\u001b[00m\n",
-      "│   │   ├── \u001b[01;32mpython_generation_process_recap.png\u001b[00m\n",
-      "│   │   ├── \u001b[01;32mtime_comparison_sequence.png\u001b[00m\n",
-      "│   │   ├── \u001b[01;32mtime_results.png\u001b[00m\n",
-      "│   │   └── \u001b[01;32mununtu.png\u001b[00m\n",
-      "│   └── \u001b[01;32mpython.png\u001b[00m\n",
-      "├── \u001b[01;32mcsvgenerator.sh\u001b[00m\n",
-      "├── \u001b[01;34mdot_net_csvgen\u001b[00m\n",
-      "│   ├── \u001b[01;32mCsvGenerator.csproj\u001b[00m\n",
-      "│   ├── \u001b[01;32mCsvGeneratorDockerfile\u001b[00m\n",
-      "│   └── \u001b[01;32mProgram.cs\u001b[00m\n",
-      "├── \u001b[01;34mexternal\u001b[00m\n",
-      "│   └── \u001b[01;34mdb_and_excel_utilities\u001b[00m\n",
-      "│       ├── README.md\n",
-      "│       ├── custom_excel_output.py\n",
-      "│       ├── \u001b[01;32mdb_base.py\u001b[00m\n",
-      "│       ├── \u001b[01;32mdb_ins_fake_data.py\u001b[00m\n",
-      "│       ├── excel_output.py\n",
-      "│       └── \u001b[01;32mutility.py\u001b[00m\n",
-      "├── \u001b[01;32mgen_random_data.py\u001b[00m\n",
-      "├── \u001b[01;32mget_utils.sh\u001b[00m\n",
-      "├── \u001b[01;34mout\u001b[00m\n",
-      "│   └── \u001b[01;32msample_data_to_transform.csv\u001b[00m\n",
-      "├── \u001b[01;32mpyspark_requirements.txt\u001b[00m\n",
-      "├── \u001b[01;32mpysparkdocker_jn.sh\u001b[00m\n",
-      "├── \u001b[01;32msample_data_to_transform.csv\u001b[00m\n",
-      "└── \u001b[01;32mtime_comparisons.sh\u001b[00m\n",
-      "\n",
-      "6 directories, 30 files\n"
+      "Time elapsed: 1 minutes and 40 seconds\n"
      ]
     }
    ],
    "source": [
-    "!tree"
+    "import os\n",
+    "import time\n",
+    "from pyspark.sql import SparkSession\n",
+    "\n",
+    "def split_file_and_save_parts():\n",
+    "    # Initialize Spark session\n",
+    "    spark = SparkSession.builder.appName(\"SplitFile\").getOrCreate()\n",
+    "\n",
+    "    # Start the timer\n",
+    "    start_time = time.time()\n",
+    "\n",
+    "    # Read the file into an RDD\n",
+    "    file_path = os.path.join(u.get_this_dir(), \"out\", \"sample_data_to_transform.csv\")\n",
+    "    file_rdd = spark.sparkContext.textFile(file_path)\n",
+    "\n",
+    "    # Calculate the number of lines per part\n",
+    "    total_lines = file_rdd.count()\n",
+    "    lines_per_part = total_lines // 4\n",
+    "\n",
+    "    # Function to save each part\n",
+    "    def save_part(index):\n",
+    "        part_rdd = file_rdd.zipWithIndex().filter(lambda x: index*lines_per_part <= x[1] < (index+1)*lines_per_part if index < 3 else x[1] >= index*lines_per_part).keys()\n",
+    "        part_data = part_rdd.collect()  # Collects data to the driver node\n",
+    "\n",
+    "        part_file_path = os.path.join(u.get_this_dir(), \"out\", f\"part_{index}.txt\")\n",
+    "        u.nukepath(part_file_path)\n",
+    "        u.nukefile(part_file_path)        \n",
+    "        with open(part_file_path, 'w') as file:\n",
+    "            for line in part_data:\n",
+    "                file.write(line + '\\n')\n",
+    "\n",
+    "    # Save each part\n",
+    "    for i in range(4):\n",
+    "        save_part(i)\n",
+    "\n",
+    "    # Stop the Spark session\n",
+    "    spark.stop()\n",
+    "\n",
+    "    # Stop the timer and calculate elapsed time\n",
+    "    end_time = time.time()\n",
+    "    elapsed_time = end_time - start_time\n",
+    "\n",
+    "    # Convert elapsed time to minutes and seconds\n",
+    "    minutes = int(elapsed_time // 60)\n",
+    "    seconds = int(elapsed_time % 60)\n",
+    "    \n",
+    "    print(f\"Time elapsed: {minutes} minutes and {seconds} seconds\")\n",
+    "\n",
+    "# Call the function\n",
+    "split_file_and_save_parts()\n"
    ]
   },
   {
@@ -97,7 +103,9 @@
    "id": "fbe3fbe7-ab9c-43fe-a5ff-08bc2bfb33b6",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "!tree"
+   ]
   }
  ],
  "metadata": {
