--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "62292812-f394-447c-beaf-8b7d71d15a31",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b9b405a0-a341-4fc9-bd1e-65f0e48a8cf5",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "72c5c7c5-2d32-4683-b8b4-83cb17b15407",
    "metadata": {},
    "outputs": [
@@ -40,7 +40,50 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Time elapsed: 1 minutes and 40 seconds\n"
+      "Error: /workspace/out/part_0.txt : Not a directory\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: /workspace/out/part_1.txt : Not a directory\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: /workspace/out/part_2.txt : Not a directory\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: /workspace/out/part_3.txt : Not a directory\n",
+      "Time elapsed: 1 minutes and 41 seconds\n"
      ]
     }
    ],
